--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -28,6 +28,12 @@
         android:layout_below="@+id/keyboardScramblerTV"
         android:layout_marginTop="30dp"
         android:id="@+id/loadingTV" />
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar2" android:layout_below="@+id/loadingTV"
+        android:layout_centerHorizontal="true" android:indeterminate="false"/>
 
 
 </RelativeLayout>
