--- a/app/src/main/res/layout/medium_level.xml
+++ b/app/src/main/res/layout/medium_level.xml
@@ -2,57 +2,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <TextView
-        android:text="Refresh"
+        android:id="@+id/timeTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:gravity="right"
+        android:text="00:00:00"
+        android:textSize="30dp"/>
+
+    <TextView
         android:id="@+id/refresh"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp" android:textSize="30dp"
-        android:gravity="center_horizontal"/>
+        android:layout_below="@+id/timeTV"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:text="Refresh"
+        android:textSize="30dp"/>
 
     <TextView
+        android:id="@+id/userResponseTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/userResponseTV"
         android:layout_below="@+id/refresh"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
-        android:textSize="20sp" android:layout_centerHorizontal="true" android:editable="true"/>
+        android:layout_marginTop="20dp" android:editable="true" android:textSize="20sp"/>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/firstRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/secondRow"
-        android:id="@+id/firstRow">
+        android:orientation="horizontal">
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/secondRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/thirdRow"
-        android:id="@+id/secondRow">
+        android:orientation="horizontal">
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/thirdRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/thirdRow"
-        android:layout_above="@+id/fourthRow">
+        android:layout_above="@+id/fourthRow"
+        android:orientation="horizontal">
     </LinearLayout>
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/fourthRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:id="@+id/fourthRow">
+        android:orientation="horizontal">
     </LinearLayout>
 </RelativeLayout>
