Fixed some logic errors

--- a/app/src/main/res/layout/activity_easy__level.xml
+++ b/app/src/main/res/layout/activity_easy__level.xml
@@ -43,7 +43,7 @@
         android:id="@+id/firstRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/seconRow"
+        android:layout_above="@+id/secondRow"
         android:orientation="horizontal">
     </LinearLayout>
 
