--- a/app/src/main/res/layout/medium_level.xml
+++ b/app/src/main/res/layout/medium_level.xml
@@ -33,8 +33,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/refresh"
         android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp" android:editable="true" android:textSize="20sp"/>
+        android:layout_marginTop="20dp"
+        android:editable="true"
+        android:textSize="30dp"/>
 
     <LinearLayout
         android:id="@+id/firstRow"
