Worked on popup menu for choosing level

--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -9,8 +9,20 @@
     tools:context="com.ryan.keyboardscrambler.HomeScreen">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/locationForChooseGameMenu"
+        android:gravity="right"
+        android:layout_marginTop="80dp"
+        android:layout_alignParentRight="true"
+        android:textColor="#ff0099cc"
+        android:textSize="30dp"
+        android:text="h"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="Start"
         android:textSize="30dp"
         android:gravity="center_horizontal"
@@ -20,8 +32,9 @@
         android:textColor="#ff0099cc"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="How to Play"
         android:id="@+id/howToPlayTV"
         android:textSize="30dp"
@@ -31,8 +44,9 @@
         android:textColor="#ff0099cc"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="Scores"
         android:id="@+id/scoresTV"
         android:textSize="30dp"
@@ -42,8 +56,9 @@
         android:textColor="#ff0099cc"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:text="Rate on Play Store"
         android:id="@+id/rateTV"
         android:textSize="30dp"
