--- a/app/src/main/res/menu/choose_level.xml
+++ b/app/src/main/res/menu/choose_level.xml
@@ -3,8 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/easyLevelItem"
-        android:title="Easy"
-        android:gravity="right"/>
+        android:title="Easy"/>
     <item
         android:id="@+id/mediumLevelItem"
         android:title="Medium" />
