--- a/keyboardscrambler/src/main/res/values/styles.xml
+++ b/keyboardscrambler/src/main/res/values/styles.xml
@@ -11,6 +11,20 @@
         <item name="android:textAppearanceSmallPopupMenu">@style/myPopupMenuTextAppearanceSmall</item>
     </style>
 
+    <style name="HomeScreenTVStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textColor">#ff0099cc</item>
+        <item name="android:shadowColor">#ff0099cc</item>
+        <item name="android:shadowRadius">1.125</item>
+        <item name="android:shadowDx">0.0</item>
+        <item name="android:shadowDy">0.0</item>
+        <item name="android:textSize">35dp</item>
+    </style>
+
     <style name="PopupItemStyle">
         <item name="android:background">#FFA0A0A0</item>
         <item name="android:gravity">right</item>
