--- a/keyboardscrambler/src/main/res/layout/dvorak__level.xml
+++ b/keyboardscrambler/src/main/res/layout/dvorak__level.xml
@@ -63,9 +63,16 @@
         android:orientation="horizontal">
     </LinearLayout>
 
-
     <LinearLayout
         android:id="@+id/fourthRow"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fifthRow"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/fifthRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
