Added Dvorak level to main screen

--- a/keyboardscrambler/src/main/res/menu/choose_level.xml
+++ b/keyboardscrambler/src/main/res/menu/choose_level.xml
@@ -10,4 +10,7 @@
     <item
         android:id="@+id/hardLevelItem"
         android:title="Pro" />
+    <item
+        android:id="@+id/dvorakLevelItem"
+        android:title="Dvorak" />
 </menu>
