--- a/keyboardscrambler/src/main/res/menu/dvorak__level.xml
+++ b/keyboardscrambler/src/main/res/menu/dvorak__level.xml
@@ -1,9 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.ryan.keyboardscrambler.Dvorak_Level" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/dvorak_label"
+        android:title="@string/title_activity_dvorak__level" />
 </menu>
