--- a/keyboardscrambler/src/main/res/layout/activity_splash.xml
+++ b/keyboardscrambler/src/main/res/layout/activity_splash.xml
@@ -32,8 +32,9 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar2" android:layout_below="@+id/loadingTV"
-        android:layout_centerHorizontal="true" android:indeterminate="false"/>
-
+        android:id="@+id/progressBar2"
+        android:layout_below="@+id/loadingTV"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="false"/>
 
 </RelativeLayout>
