--- a/keyboardscrambler/src/main/res/values/styles.xml
+++ b/keyboardscrambler/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:shadowRadius">1.125</item>
         <item name="android:shadowDx">0.0</item>
         <item name="android:shadowDy">0.0</item>
-        <item name="android:textSize">35dp</item>
+        <item name="android:textSize">35sp</item>
     </style>
 
     <style name="PopupItemStyle">
