Rate on Play Store now fits on one line

--- a/keyboardscrambler/src/main/res/layout/home_screen.xml
+++ b/keyboardscrambler/src/main/res/layout/home_screen.xml
@@ -48,6 +48,7 @@
         style="@style/HomeScreenTVStyle"
         android:text="Rate on Play Store"
         android:id="@+id/rateTV"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
+        android:textSize="34sp"
         android:layout_below="@+id/scoresTV" />
 </RelativeLayout>
