--- a/keyboardscrambler/src/main/res/anim/circle_animation.xml
+++ b/keyboardscrambler/src/main/res/anim/circle_animation.xml
@@ -2,6 +2,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
      android:shareInterpolator="false"
      android:duration="600"
-     android:fillAfter="true"
+     android:fillAfter="false"
      android:interpolator="@android:anim/accelerate_decelerate_interpolator" >
 </set>
