--- a/keyboardscrambler/src/main/res/anim/circle_animation.xml
+++ b/keyboardscrambler/src/main/res/anim/circle_animation.xml
@@ -4,4 +4,21 @@
      android:duration="600"
      android:fillAfter="false"
      android:interpolator="@android:anim/accelerate_decelerate_interpolator" >
+
+    <scale
+        android:fromXScale="1.0"
+        android:toXScale="1.5"
+        android:fromYScale="1.0"
+        android:toYScale="1.5"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        />
+    <translate
+        android:fromYDelta="80%p"
+        android:toYDelta="10%p"
+        />
+    <alpha
+        android:fromAlpha="0.3"
+        android:toAlpha="1.0"
+        />
 </set>
