--- a/keyboardscrambler/src/main/res/anim/circle_animation.xml
+++ b/keyboardscrambler/src/main/res/anim/circle_animation.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
      android:shareInterpolator="false"
      android:duration="600"
-     android:fillAfter="false"
+     android:fillAfter="true"
      android:interpolator="@android:anim/accelerate_decelerate_interpolator" >
 
     <scale
