--- a/keyboardscrambler/src/main/res/layout/activity_easy__level.xml
+++ b/keyboardscrambler/src/main/res/layout/activity_easy__level.xml
@@ -43,7 +43,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/secondRow"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="?android:selectableItemBackground">
     </LinearLayout>
 
     <LinearLayout
